# neural_chameleons_activation_oracles

./: .env.example  .gitignore  CLAUDE.md  README.md  claude.md  pyproject.toml  tomorrow.md  writeup.md
scripts/: ao_adversarial_experiment.py  ao_benchmark.py  ao_direct_experiment.py  ao_sanity_check.py  evaluate_evasion.py  full_experiment.py  generalization_experiment.py  multi_concept_experiment.py  multi_probe_experiment.py  plot_clean.py  plot_results.py  robust_experiment.py  run_full_experiment.py  test_activation_oracles.py  train_chameleon.py  train_probes.py
src/neural_chameleons/: __init__.py  chameleon.py  data.py  probes.py  utils.py
